# sys-dashboard

./: Cargo.nix  Cargo.toml  README.org  flake.nix
src/: files.rs  main.rs  memory.rs  panel.rs  process.rs  shell.rs  style.rs  system.rs
