[package]
name = "sys-dashboard"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.4.2", features=["glow", "tokio", "canvas", "pure"]}
plotters-iced = "0.3.3"
plotters = "0.3"
strum = "0.24"
strum_macros = "0.24"
chrono = { version = "0.4", default-features = false }
sysinfo = { version = "0.26", default_features = false }
plotters-backend = "0.3"
